feat: ✨ Add PriorityQueue functionality to Month2.Week2 assessment.