@@ -42,15 +42,6 @@ public class UserRepository {
     }
 
     /**
-     * Find user by name (might be multiple with same name)
-     */
-    public List<User> findByName(String name) {
-        return users.values().stream()
-                .filter(user -> user.getName().equalsIgnoreCase(name))
-                .collect(Collectors.toList());
-    }
-
-    /**
      * Get all students
      */
     public List<Student> findAllStudents() {
@@ -59,13 +50,8 @@ public class UserRepository {
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Get all teachers
-     */
-    public List<Teacher> findAllTeachers() {
-        return usersByType.get(UserType.TEACHER).stream()
-                .map(user -> (Teacher) user)
-                .collect(Collectors.toList());
+    public List<User> findAllUsers() {
+        return users.values().stream().toList();
     }
 
     /**
@@ -84,49 +70,6 @@ public class UserRepository {
         return findAllStudents().stream()
                 .filter(student -> !student.isASenior())
                 .collect(Collectors.toList());
-    }
-
-    /**
-     * Check if user exists
-     */
-    public boolean existsById(String userId) {
-        return users.containsKey(userId);
-    }
-
-    /**
-     * Get all users
-     */
-    public List<User> findAll() {
-        return new ArrayList<>(users.values());
-    }
-
-    /**
-     * Remove user from system
-     */
-    public boolean removeUser(String userId) {
-        User removedUser = users.remove(userId);
-        if (removedUser != null) {
-            usersByType.get(removedUser.getUserType()).remove(removedUser);
-            return true;
-        }
-        return false;
-    }
-
-    /**
-     * Update user information
-     */
-    public boolean updateUser(User updatedUser) {
-        if (users.containsKey(updatedUser.getId())) {
-            // Remove old version
-            User oldUser = users.get(updatedUser.getId());
-            usersByType.get(oldUser.getUserType()).remove(oldUser);
-
-            // Add updated version
-            users.put(updatedUser.getId(), updatedUser);
-            usersByType.get(updatedUser.getUserType()).add(updatedUser);
-            return true;
-        }
-        return false;
     }
 
     /**
